k8s/rabbitmq-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cms-sync-rabbitmq
  namespace: cms-sync
spec:
  type: ClusterIP
  selector:
    app: cms-sync-rabbitmq
  ports:
    - name: amqp
      port: 5672
      targetPort: amqp
    - name: management
      port: 15672
      targetPort: management
