k8s/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cms-sync-redis
  namespace: cms-sync
spec:
  type: ClusterIP
  selector:
    app: cms-sync-redis
  ports:
    - name: redis
      port: 6379
      targetPort: redis
